[gd_scene load_steps=11 format=2]

[ext_resource path="res://dungeon/Dungeon.gd" type="Script" id=1]
[ext_resource path="res://dungeon/Dungeon.tres" type="TileSet" id=2]
[ext_resource path="res://assets/gfx/tiles/vis_tiles.png" type="Texture" id=3]
[ext_resource path="res://dungeon/UI.gd" type="Script" id=4]
[ext_resource path="res://dungeon/DevConsole.gd" type="Script" id=5]

[sub_resource type="TileSet" id=1]
0/name = "vis_tiles.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "vis_tiles.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 1
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.231373, 0.32549, 0.596078, 1 )
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Slide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -96 ), Vector2( 0, 64 ) ]
}

[node name="Dungeon" type="Node2D"]
script = ExtResource( 1 )

[node name="FloorMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="FogMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="InvView" type="PanelContainer" parent="UI"]
visible = false
margin_left = 128.0
margin_top = 96.0
margin_right = 672.0
margin_bottom = 448.0
custom_styles/panel = SubResource( 3 )

[node name="Box" type="VBoxContainer" parent="UI/InvView"]
margin_left = 8.0
margin_top = 4.0
margin_right = 536.0
margin_bottom = 348.0

[node name="Title" type="Label" parent="UI/InvView/Box"]
margin_right = 528.0
margin_bottom = 31.0
text = "YOUR INVENTORY
(press ESC to continue)"
align = 1

[node name="Contents" type="RichTextLabel" parent="UI/InvView/Box"]
margin_top = 35.0
margin_right = 528.0
margin_bottom = 344.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="DevConsole" type="PanelContainer" parent="UI"]
editor/display_folded = true
margin_top = -96.0
margin_right = 448.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 4 )
script = ExtResource( 5 )

[node name="Box" type="VBoxContainer" parent="UI/DevConsole"]
margin_left = 3.0
margin_top = 3.0
margin_right = 445.0
margin_bottom = 157.0

[node name="Output" type="RichTextLabel" parent="UI/DevConsole/Box"]
margin_right = 442.0
margin_bottom = 136.0
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="Input" type="LineEdit" parent="UI/DevConsole/Box"]
margin_top = 140.0
margin_right = 442.0
margin_bottom = 154.0
focus_mode = 1
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
editable = false
focus_mode = 1
context_menu_enabled = false
caret_blink = true

[node name="Slider" type="AnimationPlayer" parent="UI/DevConsole"]
anims/Slide = SubResource( 2 )

[node name="Top" type="PanelContainer" parent="UI"]
editor/display_folded = true
margin_right = 800.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 3 )

[node name="Box" type="HBoxContainer" parent="UI/Top"]
margin_left = 8.0
margin_top = 4.0
margin_right = 792.0
margin_bottom = 60.0

[node name="Output" type="RichTextLabel" parent="UI/Top/Box"]
margin_right = 520.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true
scroll_active = false
scroll_following = true

[node name="Info" type="VBoxContainer" parent="UI/Top/Box"]
margin_left = 524.0
margin_right = 784.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Location" type="Label" parent="UI/Top/Box/Info"]
margin_right = 260.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Tunnels of Todog
L1"
align = 2
valign = 1

[node name="GameTime" type="Label" parent="UI/Top/Box/Info"]
margin_top = 38.0
margin_right = 260.0
margin_bottom = 52.0
size_flags_vertical = 6
text = "00:00:00:00"
align = 2
valign = 1

[node name="Bottom" type="PanelContainer" parent="UI"]
editor/display_folded = true
margin_top = 480.0
margin_right = 800.0
margin_bottom = 544.0
custom_styles/panel = SubResource( 3 )

[node name="Box" type="HBoxContainer" parent="UI/Bottom"]
margin_left = 8.0
margin_top = 4.0
margin_right = 792.0
margin_bottom = 60.0

[node name="Left" type="VBoxContainer" parent="UI/Bottom/Box"]
editor/display_folded = true
margin_right = 194.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="UI/Bottom/Box/Left"]
margin_right = 194.0
margin_bottom = 14.0
text = "Sir Estragon"

[node name="Title" type="Label" parent="UI/Bottom/Box/Left"]
margin_top = 18.0
margin_right = 194.0
margin_bottom = 32.0
text = "Lv3 Gouman Knight"

[node name="Middle" type="VBoxContainer" parent="UI/Bottom/Box"]
margin_left = 198.0
margin_right = 586.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="HP" type="HBoxContainer" parent="UI/Bottom/Box/Middle"]
margin_top = 3.0
margin_right = 388.0
margin_bottom = 17.0

[node name="Label" type="Label" parent="UI/Bottom/Box/Middle/HP"]
margin_right = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
size_flags_stretch_ratio = 0.5
text = "HP"

[node name="Current" type="Label" parent="UI/Bottom/Box/Middle/HP"]
margin_left = 24.0
margin_right = 95.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "3"
align = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/Bottom/Box/Middle/HP"]
margin_left = 99.0
margin_right = 312.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
max_value = 10.0
step = 1.0
value = 3.0

[node name="Max" type="Label" parent="UI/Bottom/Box/Middle/HP"]
margin_left = 316.0
margin_right = 388.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "10"

[node name="MP" type="HBoxContainer" parent="UI/Bottom/Box/Middle"]
editor/display_folded = true
margin_top = 21.0
margin_right = 388.0
margin_bottom = 35.0

[node name="Label" type="Label" parent="UI/Bottom/Box/Middle/MP"]
margin_right = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
size_flags_stretch_ratio = 0.5
text = "MP"

[node name="Current" type="Label" parent="UI/Bottom/Box/Middle/MP"]
margin_left = 24.0
margin_right = 125.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "4"
align = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/Bottom/Box/Middle/MP"]
margin_left = 129.0
margin_right = 281.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
max_value = 5.0
step = 1.0
value = 4.0

[node name="Max" type="Label" parent="UI/Bottom/Box/Middle/MP"]
margin_left = 285.0
margin_right = 388.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "5"

[node name="XP" type="HBoxContainer" parent="UI/Bottom/Box/Middle"]
editor/display_folded = true
margin_top = 39.0
margin_right = 388.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="UI/Bottom/Box/Middle/XP"]
margin_right = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
size_flags_stretch_ratio = 0.5
text = "XP"

[node name="Current" type="Label" parent="UI/Bottom/Box/Middle/XP"]
margin_left = 24.0
margin_right = 63.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "3"
align = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/Bottom/Box/Middle/XP"]
margin_left = 67.0
margin_right = 343.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
min_value = 1300.0
max_value = 2450.0
step = 1.0
value = 1625.0

[node name="Max" type="Label" parent="UI/Bottom/Box/Middle/XP"]
margin_left = 347.0
margin_right = 388.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "4"

[node name="Right" type="VBoxContainer" parent="UI/Bottom/Box"]
margin_left = 590.0
margin_right = 784.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory" type="Node2D" parent="."]
visible = false
[connection signal="game_time_changed" from="." to="UI" method="_on_Dungeon_game_time_changed"]
[connection signal="write_to_console" from="." to="UI/DevConsole" method="_on_write_to_console"]
[connection signal="command" from="UI/DevConsole" to="." method="_on_DevConsole_command"]
[connection signal="text_entered" from="UI/DevConsole/Box/Input" to="UI/DevConsole" method="_parse_input"]
